--- a/Новая папка/index.html
+++ b/Новая папка/index.html
@@ -88,12 +88,13 @@
           <li class="links__link">
             <p class="links__title">Играю на скрипке</p>
             <a class="linsk__link" href="https://rutube.info/video/95c2fc5ee66581be3661b67dff69feb7/">Видео</a>
-        
+            <p> QA или QA Engineer</p>
         </ul>
       </section>
     </main>
     <footer>
-      <button type = "button" class="button-link" href=""> Кредо </button>
+      <button type = "button" class="button-link" href=""> Кредо =) </button>
+
     </footer>
     <script type="text/javascript" src="js.js"></script>
   </body>
